--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: 14.17.0
 
       - name: Install dependencies
-        run: npm ci
+        run: npm i
 
       - name: Run eslint
         run: npm run lint:check
