--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,9 +35,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: |
-          npm set-script prepare ""
-          npx semantic-release
+          HUSKY: 0
+        run: npx semantic-release
 
   sonarcube:
     name: Sonarcube
