--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,8 +35,11 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          HUSKY: 0
-        run: npx semantic-release
+        run: |
+          npm set-script prepare ""
+          rm -rf .husky
+          cat package.json
+          npx semantic-release
 
   sonarcube:
     name: Sonarcube
