--- a/package.json
+++ b/package.json
@@ -35,16 +35,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@lomray/microservice-nodejs-lib": "^2.7.0",
-    "@lomray/microservice-remote-middleware": "^1.5.1",
+    "@lomray/microservice-nodejs-lib": "^2.8.0",
+    "@lomray/microservice-remote-middleware": "^1.6.0",
     "@lomray/typeorm-json-query": "^1.0.1",
     "class-transformer": "0.4.1",
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.0",
+    "klona": "^2.0.5",
     "pg": "^8.7.3",
+    "traverse": "^0.6.6",
     "typeorm": "0.2.41",
     "typeorm-extension": "1.2.1",
-    "winston": "^3.7.2"
+    "winston": "^3.7.2",
+    "winston-loki": "^6.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.2.1",
@@ -59,6 +62,7 @@
     "@types/node": "^16.9.6",
     "@types/sinon": "^10.0.6",
     "@types/sinon-chai": "^3.2.8",
+    "@types/traverse": "^0.6.32",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "chai": "^4.3.4",
     "eslint": "^7.32.0",
