--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "semantic-release": "^19.0.3",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
-    "ts-node": "^10.8.1",
+    "ts-node": "10.8.0",
     "tsconfig-paths": "^4.0.0",
     "ttypescript": "^1.5.13",
     "typescript": "^4.7.4"
