--- a/package.json
+++ b/package.json
@@ -39,6 +39,15 @@
     "@lomray/microservice-remote-middleware": "^1.7.1",
     "@lomray/microservices-types": "^1.5.0",
     "@lomray/typeorm-json-query": "^1.7.1",
+    "@opentelemetry/api": "^1.2.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.33.0",
+    "@opentelemetry/instrumentation-express": "^0.31.1",
+    "@opentelemetry/instrumentation-http": "^0.33.0",
+    "@opentelemetry/instrumentation-pg": "^0.31.1",
+    "@opentelemetry/instrumentation-winston": "^0.30.0",
+    "@opentelemetry/resources": "^1.7.0",
+    "@opentelemetry/sdk-node": "^0.33.0",
+    "@opentelemetry/semantic-conventions": "^1.7.0",
     "class-transformer": "0.4.1",
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.1",
