--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,13 +27,14 @@
     "strict": false,
     "pretty": true,
     "suppressImplicitAnyIndexErrors": true,
-    "target": "es5",
+    "target": "ES6",
     "baseUrl": ".",
     "paths": {
       "@__mocks__/*": ["./__mocks__/*"],
       "@mocks/*": ["./src/mocks/*"],
       "@entities/*": ["./src/entities/*"],
       "@helpers/*": ["./src/helpers/*"],
+      "@instrumentation/*": ["./src/instrumentation/*"],
       "@services/*": ["./src/services/*"],
       "@test-helpers/*": ["./src/test-helpers/*"],
       "@validators/*": ["./src/validators/*"],
