--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=Lomray-Software_microservice-helpers
+sonar.organization=lomray-software
 sonar.sources=src
 sonar.tests=__tests__
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
