feat: export tracer interface, configure rollup (support windows)

--- a/package.json
+++ b/package.json
@@ -24,13 +24,11 @@
   "author": "Mikhail Yarmaliuk",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "rm -rf lib && rollup -c && cp package.json lib/package.json",
+    "build": "rollup -c",
     "release": "npm run build && cd lib && npm publish",
-    "test": "NODE_ENV=tests TS_NODE_COMPILER_OPTIONS='{\"target\":\"es6\"}' mocha --harmony --no-warnings  __tests__ --require ts-node/register --recursive --unhandled-rejections=strict --exit",
-    "prettier:format": "prettier --write 'src/**/*.{ts,tsx,*.ts,*tsx}'",
-    "prettier:check": "prettier --check --debug-check 'src/**/*.{ts,tsx,*.ts,*tsx}'",
-    "lint:check": "eslint --ext '.ts,.tsx' 'src/**/*.{ts,tsx,*.ts,*tsx}'",
-    "lint:format": "eslint --fix --ext '.ts,.tsx' 'src/**/*.{ts,tsx,*.ts,*tsx}'",
+    "test": "cross-env NODE_ENV=tests TS_NODE_COMPILER_OPTIONS='{\"target\":\"es6\"}' mocha --harmony --no-warnings  __tests__ --require ts-node/register --recursive --unhandled-rejections=strict --exit",
+    "lint:check": "eslint --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
+    "lint:format": "eslint --fix --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
     "ts:check": "tsc --project ./tsconfig.json --skipLibCheck --noemit",
     "prepare": "husky install"
   },
@@ -74,6 +72,7 @@
     "@types/traverse": "^0.6.32",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "chai": "^4.3.6",
+    "cross-env": "^7.0.3",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -84,6 +83,8 @@
     "prettier": "^2.7.1",
     "rewiremock": "^3.14.3",
     "rollup": "^2.79.1",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-ts": "^3.0.2",
     "semantic-release": "^19.0.5",
