--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "@lomray/microservices-client-api": ">=1.3.0"
   },
   "bundledDependencies": [
     "tslib"
