fix: update packages

--- a/package.json
+++ b/package.json
@@ -26,20 +26,20 @@
   "scripts": {
     "build": "rollup -c",
     "release": "npm run build && cd lib && npm publish",
-    "test": "cross-env NODE_ENV=tests TS_NODE_COMPILER_OPTIONS='{\"target\":\"es6\"}' mocha --harmony --no-warnings  __tests__ --require ts-node/register --recursive --unhandled-rejections=strict --exit",
+    "test": "cross-env NODE_ENV=tests TS_NODE_COMPILER_OPTIONS={\\\"target\\\":\\\"es6\\\"} mocha --harmony --no-warnings  __tests__ --require ts-node/register --recursive --unhandled-rejections=strict --exit",
     "lint:check": "eslint --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
     "lint:format": "eslint --fix --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
     "ts:check": "tsc --project ./tsconfig.json --skipLibCheck --noemit",
     "prepare": "husky install"
   },
   "dependencies": {
-    "@lomray/microservice-nodejs-lib": "^2.14.2",
+    "@lomray/microservice-nodejs-lib": "^2.14.3",
     "@lomray/microservice-remote-middleware": "^1.7.4",
-    "@lomray/microservices-types": "^1.6.2",
+    "@lomray/microservices-types": "^1.7.0",
     "@lomray/typeorm-json-query": "^1.7.5",
     "@opentelemetry/api": "^1.2.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.33.0",
-    "@opentelemetry/instrumentation-express": "^0.31.1",
+    "@opentelemetry/instrumentation-express": "^0.31.2",
     "@opentelemetry/instrumentation-pg": "^0.31.1",
     "@opentelemetry/instrumentation-winston": "^0.30.0",
     "@opentelemetry/resources": "^1.7.0",
@@ -50,7 +50,7 @@
     "class-validator-jsonschema": "^3.1.1",
     "klona": "^2.0.5",
     "pg": "^8.8.0",
-    "traverse": "^0.6.6",
+    "traverse": "^0.6.7",
     "typeorm": "0.2.41",
     "typeorm-extension": "1.2.1",
     "winston": "^3.8.2",
@@ -62,18 +62,18 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@lomray/eslint-config": "^2.0.1",
     "@lomray/prettier-config": "^1.2.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "@types/chai": "^4.3.1",
-    "@types/lodash": "^4.14.182",
-    "@types/mocha": "^9.1.1",
+    "@rollup/plugin-json": "^5.0.0",
+    "@types/chai": "^4.3.3",
+    "@types/lodash": "^4.14.186",
+    "@types/mocha": "^10.0.0",
     "@types/node": "^16.9.6",
-    "@types/sinon": "^10.0.11",
+    "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.8",
     "@types/traverse": "^0.6.32",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "chai": "^4.3.6",
     "cross-env": "^7.0.3",
-    "eslint": "^8.19.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
@@ -88,7 +88,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-ts": "^3.0.2",
     "semantic-release": "^19.0.5",
-    "sinon": "^14.0.0",
+    "sinon": "^14.0.1",
     "sinon-chai": "^3.7.0",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.1.0",
