feat: add opentelemetry metric

--- a/package.json
+++ b/package.json
@@ -35,16 +35,18 @@
   "dependencies": {
     "@lomray/microservice-nodejs-lib": "^2.14.3",
     "@lomray/microservice-remote-middleware": "^1.7.4",
-    "@lomray/microservices-types": "^1.7.0",
+    "@lomray/microservices-types": "^1.7.1",
     "@lomray/typeorm-json-query": "^1.7.5",
-    "@opentelemetry/api": "^1.2.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.33.0",
-    "@opentelemetry/instrumentation-express": "^0.31.2",
-    "@opentelemetry/instrumentation-pg": "^0.31.1",
-    "@opentelemetry/instrumentation-winston": "^0.30.0",
-    "@opentelemetry/resources": "^1.7.0",
-    "@opentelemetry/sdk-node": "^0.33.0",
-    "@opentelemetry/semantic-conventions": "^1.7.0",
+    "@opentelemetry/api": "^1.3.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.34.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.34.0",
+    "@opentelemetry/host-metrics": "^0.30.1",
+    "@opentelemetry/instrumentation-express": "^0.31.3",
+    "@opentelemetry/instrumentation-pg": "^0.32.0",
+    "@opentelemetry/instrumentation-winston": "^0.30.1",
+    "@opentelemetry/resources": "^1.8.0",
+    "@opentelemetry/sdk-node": "^0.34.0",
+    "@opentelemetry/semantic-conventions": "^1.8.0",
     "class-transformer": "0.4.1",
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.1",
@@ -57,38 +59,38 @@
     "winston-loki": "^6.0.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cli": "^17.2.0",
+    "@commitlint/config-conventional": "^17.2.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@lomray/eslint-config": "^2.0.1",
+    "@lomray/eslint-config": "^2.0.2",
     "@lomray/prettier-config": "^1.2.0",
-    "@rollup/plugin-json": "^5.0.0",
-    "@types/chai": "^4.3.3",
-    "@types/lodash": "^4.14.186",
+    "@rollup/plugin-json": "^5.0.1",
+    "@types/chai": "^4.3.4",
+    "@types/lodash": "^4.14.189",
     "@types/mocha": "^10.0.0",
     "@types/node": "^16.9.6",
     "@types/sinon": "^10.0.13",
-    "@types/sinon-chai": "^3.2.8",
+    "@types/sinon-chai": "^3.2.9",
     "@types/traverse": "^0.6.32",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "chai": "^4.3.6",
+    "chai": "^4.3.7",
     "cross-env": "^7.0.3",
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
+    "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
-    "mocha": "^10.0.0",
+    "mocha": "^10.1.0",
     "nyc": "^15.1.0",
     "prettier": "^2.7.1",
-    "rewiremock": "^3.14.3",
+    "rewiremock": "^3.14.4",
     "rollup": "^2.79.1",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-ts": "^3.0.2",
     "semantic-release": "^19.0.5",
-    "sinon": "^14.0.1",
+    "sinon": "^14.0.2",
     "sinon-chai": "^3.7.0",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.1.0",
@@ -96,8 +98,8 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "lodash": "^4.17.21",
-    "@lomray/microservices-client-api": ">=1.3.0"
+    "@lomray/microservices-client-api": ">=1.3.0",
+    "lodash": "^4.17.21"
   },
   "bundledDependencies": [
     "tslib"
