--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@opentelemetry/exporter-metrics-otlp-http": "^0.34.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.34.0",
     "@opentelemetry/host-metrics": "^0.30.1",
+    "@opentelemetry/instrumentation": "^0.34.0",
     "@opentelemetry/instrumentation-express": "^0.31.3",
     "@opentelemetry/instrumentation-pg": "^0.32.0",
     "@opentelemetry/instrumentation-winston": "^0.30.1",
