--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "traverse": "^0.6.7",
     "typeorm": "0.2.41",
     "typeorm-extension": "1.2.1",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2",
     "winston-loki": "^6.0.6"
   },
@@ -73,6 +74,7 @@
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
     "@types/traverse": "^0.6.32",
+    "@types/uuid": "^8.3.4",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "chai": "^4.3.7",
     "cross-env": "^7.0.3",
