--- a/package.json
+++ b/package.json
@@ -33,25 +33,25 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@lomray/microservice-nodejs-lib": "^2.14.5",
-    "@lomray/microservice-remote-middleware": "^1.7.5",
-    "@lomray/microservices-types": "^1.7.1",
-    "@lomray/typeorm-json-query": "^1.7.5",
-    "@opentelemetry/api": "^1.3.0",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.34.0",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.34.0",
+    "@lomray/microservice-nodejs-lib": "^2.14.6",
+    "@lomray/microservice-remote-middleware": "^1.7.6",
+    "@lomray/microservices-types": "^1.7.2",
+    "@lomray/typeorm-json-query": "^1.7.6",
+    "@opentelemetry/api": "^1.4.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.35.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.35.0",
     "@opentelemetry/host-metrics": "^0.31.0",
-    "@opentelemetry/instrumentation": "^0.34.0",
+    "@opentelemetry/instrumentation": "^0.35.0",
     "@opentelemetry/instrumentation-express": "^0.32.0",
-    "@opentelemetry/instrumentation-pg": "^0.33.0",
+    "@opentelemetry/instrumentation-pg": "^0.34.0",
     "@opentelemetry/instrumentation-winston": "^0.31.0",
-    "@opentelemetry/resources": "^1.8.0",
-    "@opentelemetry/sdk-node": "^0.34.0",
-    "@opentelemetry/semantic-conventions": "^1.8.0",
+    "@opentelemetry/resources": "^1.9.0",
+    "@opentelemetry/sdk-node": "^0.35.0",
+    "@opentelemetry/semantic-conventions": "^1.9.0",
     "class-transformer": "0.4.1",
-    "class-validator": "^0.13.2",
-    "class-validator-jsonschema": "^3.1.1",
-    "klona": "^2.0.5",
+    "class-validator": "^0.14.0",
+    "class-validator-jsonschema": "^5.0.0",
+    "klona": "^2.0.6",
     "pg": "^8.8.0",
     "traverse": "^0.6.7",
     "typeorm": "0.2.41",
@@ -61,43 +61,45 @@
     "winston-loki": "^6.0.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.2.0",
-    "@commitlint/config-conventional": "^17.2.0",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@lomray/eslint-config": "^2.0.2",
     "@lomray/prettier-config": "^1.2.0",
-    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-replace": "^5.0.2",
     "@types/chai": "^4.3.4",
-    "@types/lodash": "^4.14.189",
-    "@types/mocha": "^10.0.0",
-    "@types/node": "^16.9.6",
+    "@types/lodash": "^4.14.191",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.11.18",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
     "@types/traverse": "^0.6.32",
-    "@types/uuid": "^8.3.4",
+    "@types/uuid": "^9.0.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "chai": "^4.3.7",
     "cross-env": "^7.0.3",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.2",
-    "lint-staged": "^13.0.3",
-    "mocha": "^10.1.0",
+    "fs-extra": "^11.1.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.3",
     "rewiremock": "^3.14.4",
     "rollup": "^2.79.1",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-ts": "^3.0.2",
-    "semantic-release": "^19.0.5",
-    "sinon": "^14.0.2",
+    "rollup-plugin-ts": "3.0.2",
+    "semantic-release": "^20.0.2",
+    "sinon": "^15.0.1",
     "sinon-chai": "^3.7.0",
     "ts-node": "10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "ttypescript": "^1.5.13",
+    "tsconfig-paths": "^4.1.2",
+    "ttypescript": "^1.5.15",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
