fix: get constants type
add sonarcloud coverage exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=Lomray-Software_microservice-helpers
 sonar.organization=lomray-software
 sonar.sources=src
 sonar.tests=__tests__
+sonar.coverage.exclusions=src/instrumentation/**/*,src/test-helpers/**/*,src/interfaces/**/*,src/helpers/tracer.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # =====================================================
