--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@opentelemetry/resources": "^1.9.1",
     "@opentelemetry/sdk-node": "^0.35.1",
     "@opentelemetry/semantic-conventions": "^1.9.1",
-    "class-transformer": "0.4.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "class-validator-jsonschema": "^5.0.0",
     "klona": "^2.0.6",
