--- a/package.json
+++ b/package.json
@@ -104,9 +104,7 @@
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
-    "lodash": "^4.17.21"
-  },
-  "bundledDependencies": [
-    "tslib"
-  ]
+    "lodash": "^4.17.21",
+    "tslib": "^2.5.0"
+  }
 }
