fix: update deps

--- a/package.json
+++ b/package.json
@@ -33,22 +33,22 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@lomray/microservice-nodejs-lib": "^2.20.6",
-    "@lomray/microservice-remote-middleware": "^1.8.1",
-    "@lomray/microservices-client-api": "^2.15.1",
-    "@lomray/microservices-types": "^1.12.1",
-    "@lomray/typeorm-json-query": "^2.5.3",
+    "@lomray/microservice-nodejs-lib": "^2.21.1",
+    "@lomray/microservice-remote-middleware": "^1.8.2",
+    "@lomray/microservices-client-api": "^2.28.0",
+    "@lomray/microservices-types": "^1.12.2",
+    "@lomray/typeorm-json-query": "^2.5.4",
     "@opentelemetry/api": "^1.4.1",
-    "@opentelemetry/exporter-metrics-otlp-http": "^0.39.1",
-    "@opentelemetry/exporter-trace-otlp-http": "^0.39.1",
-    "@opentelemetry/host-metrics": "^0.32.1",
-    "@opentelemetry/instrumentation": "^0.39.1",
-    "@opentelemetry/instrumentation-express": "^0.32.2",
-    "@opentelemetry/instrumentation-pg": "^0.35.1",
-    "@opentelemetry/instrumentation-winston": "^0.31.2",
-    "@opentelemetry/resources": "^1.13.0",
-    "@opentelemetry/sdk-node": "^0.39.1",
-    "@opentelemetry/semantic-conventions": "^1.13.0",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.41.1",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.41.1",
+    "@opentelemetry/host-metrics": "^0.33.0",
+    "@opentelemetry/instrumentation": "^0.41.1",
+    "@opentelemetry/instrumentation-express": "^0.33.0",
+    "@opentelemetry/instrumentation-pg": "^0.36.0",
+    "@opentelemetry/instrumentation-winston": "^0.32.0",
+    "@opentelemetry/resources": "^1.15.1",
+    "@opentelemetry/sdk-node": "^0.41.1",
+    "@opentelemetry/semantic-conventions": "^1.15.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "class-validator-jsonschema": "^5.0.0",
@@ -57,45 +57,45 @@
     "traverse": "^0.6.7",
     "typeorm": "0.2.41",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2",
+    "winston": "^3.10.0",
     "winston-loki": "^6.0.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@lomray/eslint-config": "^3.0.0",
     "@lomray/prettier-config": "^1.2.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-replace": "^5.0.2",
     "@types/chai": "^4.3.5",
-    "@types/lodash": "^4.14.194",
+    "@types/lodash": "^4.14.196",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.13.0",
     "@types/sinon": "^10.0.15",
     "@types/sinon-chai": "^3.2.9",
     "@types/traverse": "^0.6.32",
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^9.0.2",
     "@zerollup/ts-transform-paths": "^1.7.18",
     "chai": "^4.3.7",
     "cross-env": "^7.0.3",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "rewiremock": "^3.14.5",
     "rollup": "^2.79.1",
     "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-ts": "3.0.2",
-    "semantic-release": "^21.0.2",
-    "sinon": "^15.0.4",
+    "rollup-plugin-ts": "^3.2.0",
+    "semantic-release": "^21.0.7",
+    "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.2.0",
@@ -104,11 +104,14 @@
   },
   "peerDependencies": {
     "lodash": "^4.17.21",
-    "tslib": "^2.5.0"
+    "tslib": "^2.6.1"
   },
   "overrides": {
     "typeorm": {
       "xml2js": "0.5.0"
+    },
+    "winston-loki": {
+      "protobufjs": "^7.2.4"
     }
   }
 }
