fix: ts rollup plugin version

--- a/package.json
+++ b/package.json
@@ -89,11 +89,11 @@
     "nyc": "^15.1.0",
     "prettier": "^3.0.0",
     "rewiremock": "^3.14.5",
-    "rollup": "^2.79.1",
-    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup": "^3.27.0",
     "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-ts": "^3.2.0",
+    "rollup-plugin-ts": "3.0.2",
     "semantic-release": "^21.0.7",
     "sinon": "^15.2.0",
     "sinon-chai": "^3.7.0",
